{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 116,
  "lineage": "5f79f15c-2f05-1918-da53-468f3be334e1",
  "resources": [
    {
      "module": "module.aws-sandbox-kieniObuzor.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0416f96ae3d1a3f29",
            "arn": "arn:aws:ec2:us-east-1:430247891289:instance/i-0792cf0c32c0e3703",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "xvdh",
                "encrypted": false,
                "iops": 300,
                "tags": {
                  "Name": "kieniobuzor-sandbox",
                  "iac:created-with": "terraform",
                  "iac:purpose": "magnet_interview"
                },
                "throughput": 0,
                "volume_id": "vol-06f6ca771e4a73270",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kieniobuzor-sandbox-profile",
            "id": "i-0792cf0c32c0e3703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kieniobuzor",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0410a6d70bb935328",
            "private_dns": "ip-10-118-19-32.ec2.internal",
            "private_ip": "10.118.19.32",
            "public_ip": "18.234.67.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0f3e7c782c836d78a",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f07e822241cc2ee",
            "tags": {
              "Name": "kieniobuzor-sandbox-instance"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-instance",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b40cd1146f44b6cf"
            ]
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.ec2.aws_iam_instance_profile.this",
            "module.aws-sandbox-kieniObuzor.module.ec2.aws_iam_role.role",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_security_group.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.private",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:network-interface/eni-01d25c875ff4e4b65",
            "attachment": [
              {
                "attachment_id": "eni-attach-0352abb5e140782c3",
                "device_index": 1,
                "instance": "i-0792cf0c32c0e3703"
              }
            ],
            "id": "eni-01d25c875ff4e4b65",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:fb:db:89:39:69",
            "owner_id": "430247891289",
            "private_ip": "10.118.19.150",
            "private_ips": [
              "10.118.18.152",
              "10.118.19.150"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0b40cd1146f44b6cf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f07e822241cc2ee",
            "tags_all": {
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            }
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.private",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this",
            "module.aws-sandbox-kieniObuzor.module.ec2.aws_iam_instance_profile.this",
            "module.aws-sandbox-kieniObuzor.module.ec2.aws_iam_role.role",
            "module.aws-sandbox-kieniObuzor.module.ec2.aws_instance.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044f8c11bfb766565",
            "association_id": "eipassoc-0821e7e229fa4919f",
            "domain": "vpc",
            "id": "eipalloc-044f8c11bfb766565",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08984f4068f9153e8",
            "private_dns": "ip-10-118-20-93.ec2.internal",
            "private_ip": "10.118.20.93",
            "public_dns": "ec2-18-208-233-17.compute-1.amazonaws.com",
            "public_ip": "18.208.233.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kieniobuzor-sandbox-natgwIP"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-natgwIP",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:internet-gateway/igw-00ce501665b3faa4f",
            "id": "igw-00ce501665b3faa4f",
            "owner_id": "430247891289",
            "tags": {
              "Name": "kieniobuzor-sandbox-igw"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-igw",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            },
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044f8c11bfb766565",
            "connectivity_type": "public",
            "id": "nat-0e388f73154a728c9",
            "network_interface_id": "eni-08984f4068f9153e8",
            "private_ip": "10.118.20.93",
            "public_ip": "18.208.233.17",
            "subnet_id": "subnet-09ea4a7fa46781d4d",
            "tags": {
              "Name": "kieniobuzor-sandbox-natgw",
              "env": "kieniobuzor"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-natgw",
              "env": "kieniobuzor",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            }
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_eip.nat",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.public",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017ea21aaec7f74e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e388f73154a728c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017ea21aaec7f74e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_route_table.private",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.public",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_eip.nat",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00ce501665b3faa4f",
            "id": "r-rtb-06f1f566a690b66991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f1f566a690b6699",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_internet_gateway.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_route_table.public",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:route-table/rtb-017ea21aaec7f74e9",
            "id": "rtb-017ea21aaec7f74e9",
            "owner_id": "430247891289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e388f73154a728c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kieniobuzor-sandbox-private-rtb",
              "env": "kieniobuzor",
              "visibility": "private"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-private-rtb",
              "env": "kieniobuzor",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview",
              "visibility": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:route-table/rtb-06f1f566a690b6699",
            "id": "rtb-06f1f566a690b6699",
            "owner_id": "430247891289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ce501665b3faa4f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kieniobuzor-sandbox-public-rtb",
              "env": "kieniobuzor",
              "visibility": "public"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-public-rtb",
              "env": "kieniobuzor",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview",
              "visibility": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081760e9b3974af42",
            "route_table_id": "rtb-017ea21aaec7f74e9",
            "subnet_id": "subnet-03f07e822241cc2ee"
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_route_table.private",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.private",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdc6c3974c422cf6",
            "route_table_id": "rtb-06f1f566a690b6699",
            "subnet_id": "subnet-09ea4a7fa46781d4d"
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_route_table.public",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_subnet.public",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:security-group/sg-0b40cd1146f44b6cf",
            "description": "Allows ssh/rdp traffic from kieniobuzor",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b40cd1146f44b6cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.182.181.7/32"
                ],
                "description": "Allows rdp traffic from kieniobuzor",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "142.182.181.7/32"
                ],
                "description": "Allows ssh traffic from kieniobuzor",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kieniobuzor-access-sg",
            "name_prefix": "",
            "owner_id": "430247891289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kieniobuzor-access-sg"
            },
            "tags_all": {
              "Name": "kieniobuzor-access-sg",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows all egress traffic",
            "from_port": 0,
            "id": "sgrule-3037694973",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b40cd1146f44b6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_security_group.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "142.182.181.7/32"
            ],
            "description": "Allows rdp traffic from kieniobuzor",
            "from_port": 3389,
            "id": "sgrule-2323286095",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b40cd1146f44b6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_security_group.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "142.182.181.7/32"
            ],
            "description": "Allows ssh traffic from kieniobuzor",
            "from_port": 22,
            "id": "sgrule-793445398",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b40cd1146f44b6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_security_group.this",
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:subnet/subnet-03f07e822241cc2ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.118.18.0/23",
            "id": "subnet-03f07e822241cc2ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430247891289",
            "tags": {
              "Name": "kieniobuzor-sandbox-private-subnet",
              "visibility": "private"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-private-subnet",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview",
              "visibility": "private"
            },
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:subnet/subnet-09ea4a7fa46781d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.118.20.0/23",
            "id": "subnet-09ea4a7fa46781d4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430247891289",
            "tags": {
              "Name": "kieniobuzor-sandbox-public-subnet",
              "visibility": "public"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-public-subnet",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview",
              "visibility": "public"
            },
            "vpc_id": "vpc-092cc0d7bc4fba847"
          },
          "dependencies": [
            "module.aws-sandbox-kieniObuzor.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sandbox-kieniObuzor.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430247891289:vpc/vpc-092cc0d7bc4fba847",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.118.0.0/16",
            "default_network_acl_id": "acl-01a39424629d2b932",
            "default_route_table_id": "rtb-0228d023d23e3abbb",
            "default_security_group_id": "sg-0f9f1467306a6f359",
            "dhcp_options_id": "dopt-0508212b89e6a85ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-092cc0d7bc4fba847",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0228d023d23e3abbb",
            "owner_id": "430247891289",
            "tags": {
              "Name": "kieniobuzor-sandbox-vpc"
            },
            "tags_all": {
              "Name": "kieniobuzor-sandbox-vpc",
              "iac:created-with": "terraform",
              "iac:purpose": "magnet_interview"
            }
          }
        }
      ]
    }
  ]
}